--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'javax.servlet:jstl:1.2'
 
+    implementation 'org.reflections:reflections:0.10.2'
+
     implementation 'ch.qos.logback:logback-classic:1.2.3'
 
     implementation 'org.passay:passay:1.6.1'
